--- a/AboutUs.html
+++ b/AboutUs.html
@@ -15,7 +15,7 @@
                 <li><a href="./location.html">Location</li>  
                 <li><a href="./Posture.html">Posture</a></li>  
                 <li id="dh1"><a href="./AboutUs.html">About Us</a></li>  
-                <li><a href="./help.html">Help</a></li>  
+                <li><a href="./review.html">Reviews</a></li>   
                 </ul>
           </div>
            
