--- a/location.html
+++ b/location.html
@@ -15,7 +15,7 @@
                   <li id="dh1"><a href="./location.html">Location</li>  
                   <li><a href="./Posture.html">Posture</a></li>  
                   <li><a href="./AboutUs.html">About Us</a></li>  
-                  <li><a href="./help.html">Help</a></li>  
+                  <li><a href="./review.html">Reviews</a></li>  
                 </ul>
             </div>
             
